Gemini SSE Version

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,22 @@
 # The transport for the MCP server - either 'sse' or 'stdio' (defaults to sse if left empty)
-TRANSPORT=
+TRANSPORT=sse
 
 # Host to bind to if using sse as the transport (leave empty if using stdio)
-HOST=
+HOST=0.0.0.0
 
 # Port to listen on if using sse as the transport (leave empty if using stdio)
 PORT=
 
-# Get your Open AI API Key by following these instructions -
-# https://help.openai.com/en/articles/4936850-where-do-i-find-my-openai-api-key
-# This is for the embedding model - text-embed-small-3 will be used
-OPENAI_API_KEY=
+# Get your Gemini API Key from the Google Cloud Console -
+# https://aistudio.google.com/apikey
+GEMINI_API_KEY=<>-<>
 
 # For the Supabase version (sample_supabase_agent.py), set your Supabase URL and Service Key.
 # Get your SUPABASE_URL from the API section of your Supabase project settings -
 # https://supabase.com/dashboard/project/<your project ID>/settings/api
-SUPABASE_URL=
+SUPABASE_URL=https://<>.supabase.co
 
 # Get your SUPABASE_SERVICE_KEY from the API section of your Supabase project settings -
 # https://supabase.com/dashboard/project/<your project ID>/settings/api
 # On this page it is called the service_role secret.
-SUPABASE_SERVICE_KEY=
+SUPABASE_SERVICE_KEY=eyJhbGciOiJIUzI1NiIsInxxxxxxxxxxxxxxxxxxxxxxxx
